Add requirements and autothrottling settings

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ coverage>=4.5.1
 git+https://github.com/sztal/taukit.git@dev-0.0.0#egg=taukit
 mongoengine>=0.17.0,<1.0.0
 scrapy>=1.6.0,<2.0.0
+furl>=2.0.0,<3.0.0
+jmespath>=0.9.4,<1.0.0
