--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,10 @@ pytest-pylint>=0.12.2
 pytest-benchmark>=3.1.1
 pytest-doctestplus>=0.2.0
 coverage>=4.5.1
-git+https://github.com/sztal/taukit.git@dev-0.0.0#egg=taukit
-mongoengine>=0.17.0,<1.0.0
-scrapy>=1.6.0,<2.0.0
-furl>=2.0.0,<3.0.0
-jmespath>=0.9.4,<1.0.0
-cerberus>=1.2,<2.0
-tqdm>=4.32.1,<5.0.0
+mongoengine>=0.17.0
+scrapy>=1.6.0
+furl>=2.0.0
+tqdm>=4.32.1
+dateparser
+jmespath
+more_itertools
